src/objects/Role_Instance__c.object
<CustomObject>
    <fields>
        <fullName>Daily_rate__c</fullName>
        <formula>Daily_rate_number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Daily rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Daily_rate_number__c</fullName>
        <formula>Hourly_rate__c * 8</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Daily rate number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_per_role__c</fullName>
        <formula>Hours_Per_Role__c / 8</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days per role</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hourly_rate__c</fullName>
        <label>Hourly rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hours_Per_Role__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Hours Per Role</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <formula>Total_Hours__c * Hourly_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote_Rate_Plan_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Rate Plan Charge</label>
        <referenceTo>zqu__QuoteRatePlanCharge__c</referenceTo>
        <relationshipLabel>Role Instance</relationshipLabel>
        <relationshipName>Role_Instance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Role Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Days__c</fullName>
        <formula>Days_per_role__c * Role_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <formula>Role_Quantity__c * Hours_Per_Role__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Role Instance</label>
    <nameField>
        <label>Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Role Instance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>